OpenVi 7.0.2 -> OpenVi 7.0.3 (Unreleased): Tue Jan 25 11:57:47 2022
	+ Remove two unused wrapper headers
	+ Set visible tab character to '~' and expose option in GNUmakefile
	+ Installed binaries are now prefixed with 'o' (e.g. 'ovi') by default
	+ Explicitly invoke the POSIX-compliant version of the awk utility
	+ Clarify (and simplify) GNUmakefile and build configuration
	+ Update ChangeLog for consistency, fix spelling and typos
	+ Update LICENSE text

OpenVi 7.0.1 -> OpenVi 7.0.2: Tue Jan 25 13:44:48 2022
	+ Debugging builds now default to compiling with '-Wall -Wextra'
	+ Only pass '-pipe' to the compiler for non-debugging builds
	+ Expand the formatting of the usage help text for readability
	+ Change the DEBUG_VI GNUmakefile flag to simply DEBUG
	+ For debugging builds, document the existence of -T (Trace) in usage
	+ Don't strip the binary by default; add "install-strip" target
	+ Make clean targets more robust; warn if unable to remove 'bin'
	+ Add standard "clean", "distclean", "realclean", "mostlyclean", and
	  "maintainer-clean" targets to GNUmakefile
	+ Increase the default escapetime to 2/10ths of a second
	+ Add OpenBSD-compatible mkstemp function allowing for longer filenames
	+ Silence some potential warnings with explicit casting
	+ Exit with an error when screen is too small for visual mode
	+ Apply Debian's patch to fix backwards sentence moving
	+ Fix horizontal scroll count; patch from Debian
	+ Change a #define to a typedef in regex library
	+ Fix some typos and minor errors in the documentation and tutorials
	+ Update .gitignore to include patch/diff detritus; no binary change
	+ Adjust calculation to avoid "BDB0511 page sizes must be a power-of-2"
	  warning; BDB 1.85 only cared if page size was even; closes GH issue #3
	+ Apply .exrc writeability patch from hesso at pool.math.tu-berlin.de
	+ If TERM is unset, set to null, or otherwise unknown, first attempt
	  to fallback to "vt100"; exit with a fatal error if "vt100" fails